migrate to caffeine from chronicle map