@@ -4,7 +4,7 @@
 
   <groupId>com.recceda</groupId>
   <artifactId>recceda-otp</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.2</version>
   <packaging>jar</packaging>
   
   <properties>
@@ -15,9 +15,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>net.openhft</groupId>
-      <artifactId>chronicle-map</artifactId>
-      <version>3.27ea1</version>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+      <version>3.1.8</version>
     </dependency>
     
     <dependency>
@@ -66,24 +66,8 @@
           <target>8</target>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-            --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
-            --add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-            --add-opens=java.base/java.io=ALL-UNNAMED
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-            --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED
-            --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-          </argLine>
-        </configuration>
-      </plugin>
+      
+
     </plugins>
   </build>
 </project>
